--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pyinstrument" %}
-{% set version = "3.2.0" %}
-{% set sha256 = "ce8fef6ea88349f0060b6d974483fd64d2c061346e6b78bca6357509a5121665" %}
+{% set version = "3.3.0" %}
+{% set sha256 = "1cb0c9900a7ce75f8a64c10b7f11c1cdce1f7ff7e02fed687d35f8e95876cb5b" %}
 
 package:
   name: {{ name|lower }}
@@ -35,9 +35,9 @@ test:
     - pyinstrument --help
 
 about:
-  home: "https://github.com/joerick/pyinstrument"
+  home: https://github.com/joerick/pyinstrument
   license: BSD-3-Clause
   license_family: BSD
   license_file: LICENSE
-  summary: "🚴 Call stack profiler for Python. Shows you why your code is slow!"
+  summary: 🚴 Call stack profiler for Python. Shows you why your code is slow!
   dev_url: https://github.com/joerick/pyinstrument
