--- a/.ci_support/linux_64_nodejs14.yaml
+++ b/.ci_support/linux_64_nodejs14.yaml
@@ -6,6 +6,8 @@ channel_targets:
 - nsls2forge main
 docker_image:
 - quay.io/condaforge/linux-anvil-comp7
+nodejs:
+- '14'
 pin_run_as_build:
   python:
     min_pin: x.x
